tests/error/struct_errors/func_overrides_field2.err
Error: Duplicate field (at $FILE:7:4)
  | 
5 | class MyStruct:
6 |     @guppy
7 |     def x(self: "MyStruct") -> int:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |         return 0
  | ^^^^^^^^^^^^^^^^ Struct `MyStruct` already contains a field named `x`

Guppy compilation failed due to 1 previous error
